Working on styling the page like a paper notebook in  css

--- a/style.css
+++ b/style.css
@@ -4,28 +4,31 @@ body {
     background: lightgoldenrodyellow;
 }
 
+header {
+    padding-top: 53px;
+}
+
 #glossary {
     
     padding-left: 75px;
+}
+
+#content {
+    height: 250px;
 }
 
 
 
 /* Style feuille de papier */
 .paper {
-    position: absolute;
-    height: 550px;
     width: 450px;
     background: rgba(255,255,255,0.9);
-    margin: -275px -225px;
-    left: 50%;
-    top: 50%;
     box-shadow: 0px 0px 5px 0px #888;
 }
 
-.paper::before {
+.lines2 {
+    position: absolute;    
     content: '';
-    position: absolute;
     left: 45px;
     height: 100%;
     width: 2px;
@@ -33,7 +36,6 @@ body {
 }
 
 .lines {
-    margin-top: 40px;
     height: calc(100% - 40px);
     width: 100%;
     background-image: repeating-linear-gradient(white 0px, white 24px, steelblue 25px);
@@ -59,10 +61,6 @@ body {
 
 .hole-bottom {
     bottom: 10%;
-}
-
-#content {
-    height: 250px;
 }
 
 .blank_row {
