--- a/style.css
+++ b/style.css
@@ -29,6 +29,20 @@ header {
     box-shadow: 0px 0px 5px 0px #888;
 }
 
+#texture {
+    top: 0px;
+    left: 0px;
+    position: absolute;    
+    content: '';
+    height: 100%;
+    width: 100%;
+
+    background-image: url(img/texture-paper.jpg);
+    background-repeat: repeat;
+
+    opacity: 0.1;
+}
+
 .lines2 {
     top: 0px;
     position: absolute;    
