--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ header {
     width: 450px;
     background: rgba(255,255,255,0.9);
     box-shadow: 0px 0px 5px 0px #888;
+
+    border-radius: 5px;
 }
 
 #texture {
