--- a/style.css
+++ b/style.css
@@ -11,18 +11,34 @@ header {
 #glossary {
     
     padding-left: 75px;
-    padding-bottom: 20px;
 }
 
 #content {
     height: 250px;
 }
 
+/* Style marque-page */
+#booklets-container {
 
+    position: absolute;
+    z-index: -1;
+    top: 30px;
+    right: -30px;
+}
+.booklet {
+
+    rotate: 10;
+    background-color: aquamarine;
+    padding: 5px 10px 5px 15px;
+    /* border-top-left-radius: 10px; */
+    border-top-right-radius: 10px;
+    box-shadow: 0px 0px 5px 0px #888;    
+}
 
 /* Style feuille de papier */
 .paper {
     
+    padding-bottom: 25px;
     padding-top: 53px;
     width: 450px;
     background: rgba(255,255,255,0.9);
