--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header {
     margin: 50px auto 20px;     */
     border-radius: 20px;
     background-color: burlywood;
+    box-shadow: 0px 0px 5px 0px #888;    
 }
 #inner-hard-cover {
 
