--- a/style.css
+++ b/style.css
@@ -179,11 +179,11 @@ p {
 
 
 .ring {
-    position: absolute;
+    position: relative;
     width: 60px;
     height: 17px;
-    left: -31px;
-    top: 172px;
+    left: -50px;
+    top: -1263px;
     z-index: 3;
 }
 
