--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ footer {
     /* padding: 50px;
     margin: 50px auto 20px; */
     border-radius: 20px;
-    background-color: red;
+    background-color: burlywood;
 
     background-image: url(img/texture-craft-paper.jpg);
     background-repeat: repeat;
@@ -78,7 +78,7 @@ footer {
     height: 109%;
     width: 101%;
     top: -45px;
-    left: -20px;
+    left: -10px;
 
     box-shadow: 0px 0px 5px 0px #333;   
 }
@@ -125,11 +125,16 @@ footer {
     position: absolute;
     z-index: -1;
     top: 30px;
-    right: -35px;
+    right: -135px;
 }
+
+.nav-tabs {
+
+}
+
 .booklet {
 
-    /* rotate: 10;kqezkjhzzsrkjhhzerekqzerkjhzerkijkhjzerheoizjehjrooizhehroihzer' */
+    /* rotate: 10; */
     padding: 7px 7px 7px 18px;
     /* border-top-left-radius: 10px; */
     border-radius: 7px;
@@ -210,9 +215,9 @@ footer {
 
 .rings {
     position: relative;
-    width: 80px;
+    width: 90px;
     height: 17px;
-    left: -65px;
+    left: -75px;
     top: 4px;
     z-index: 3;
 }
@@ -234,7 +239,7 @@ footer {
     left: 20px;
     height: 30px;
     width: 30px;
-    background: lightgoldenrodyellow;
+    background: burlywood;
     border-radius: 50%;
     box-shadow: inset 0px 0px 2px 0px #888;
 }
@@ -317,6 +322,10 @@ footer {
 
 .hole-20 {
     top: 1000px;
+}
+
+.hole-21 {
+    top: 1050px;
 }
 
 .blank_row {
