--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
 <%- include('./parts/head') %>
     <%- include('./parts/header') %>
+    
+    <div class="blank_row row"></div>
 
-            <div class="row mt-5">
+            <div class="row mx-0">
 
                 <div class="col-lg-2"></div>
 
@@ -62,262 +64,12 @@
 
                         </div>
 
-                        <div id="booklets-container">
-                            <div class="booklet x1">
-                                #
-                            </div>
-                            <div class="booklet x1">
-                                A
-                            </div>
-                            <div class="booklet x1">
-                                B
-                            </div>
-                            <div class="booklet x1">
-                                C
-                            </div>
-                            <div class="booklet x1">
-                                D
-                            </div>
-                            <div class="booklet x1">
-                                E
-                            </div>
-                            <div class="booklet x2">
-                                F
-                            </div>
-                            <div class="booklet x2">
-                                G
-                            </div>
-                            <div class="booklet x2">
-                                H
-                            </div>
-                            <div class="booklet x2">
-                                I
-                            </div>
-                            <div class="booklet x2">
-                                J
-                            </div>
-                            <div class="booklet x3">
-                                K
-                            </div>
-                            <div class="booklet x3">
-                                L
-                            </div>
-                            <div class="booklet x3">
-                                M
-                            </div>
-                            <div class="booklet x3">
-                                N
-                            </div>
-                            <div class="booklet x3">
-                                O
-                            </div>
-                            <div class="booklet x4">
-                                P
-                            </div>
-                            <div class="booklet x4">
-                                Q
-                            </div>
-                            <div class="booklet x4">
-                                R
-                            </div>
-                            <div class="booklet x4">
-                                S
-                            </div>
-                            <div class="booklet x4">
-                                T
-                            </div>
-                            <div class="booklet x5">
-                                U
-                            </div>
-                            <div class="booklet x5">
-                                V
-                            </div>
-                            <div class="booklet x5">
-                                W
-                            </div>
-                            <div class="booklet x5">
-                                X
-                            </div>
-                            <div class="booklet x5">
-                                Y
-                            </div>
-                            <div class="booklet x5 zz">
-                                Z
-                            </div>
-                        </div>
+                        <%- include('./elements/booklets') %>
 
                         <!-- <div class="inner-hard-cover"></div> -->
                         <div class="hard-cover"></div>
 
-                        <div class="holes-container">
-                            <div class="holes hole-1">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-2">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-3">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-4">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-5">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-6">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-7">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-8">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-9">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-10">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-11">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-12">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-13">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-14">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-15">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-16">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-17">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-18">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-19">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-20">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-
-                            <div class="holes hole-21">
-                                <div class="rings">
-                                    <div class="ring"></div>
-                                    <div class="ring-spacer"></div>
-                                    <div class="ring"></div>
-                                </div>
-                            </div>
-                        </div>
+                        <%- include('./elements/rings') %>
 
 
                     </div>
