--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -1,11 +1,12 @@
 <div id="main_container" class="container-fluid d-flex h-100 p-0 flex-column">
 
-    <header class="m-0 text-light">
+    <header class="sticky-top m-0 text-light">
 
         <nav class="navbar navbar-expand navbar-dark bg-dark p-0 m-0">
 
             <div class="d-flex justify-content-end mr-auto">
-                Nav Items Here
+                <a class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalConnect">Connect</a>
+                <a class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalRegister">Register</a>
             </div>
 
 
@@ -15,3 +16,6 @@
         </nav>
 
     </header>
+
+    <%- include('../modals/connect')%>
+    <%- include('../modals/register')%>
