reduction du code pour afficher toutes les lettres en marque page

--- a/views/elements/booklets.ejs
+++ b/views/elements/booklets.ejs
@@ -1,85 +1,7 @@
 <div id="booklets-container">
-    <% letters.forEach( %>
-    <% ); %>
-    <div class="booklet x1">
-        <a href="#">#</a>
+    <% letters.forEach(function(items){ %>
+        <div class="booklet x1">
+        <a href="#"><%=items%></a>
     </div>
-    <div class="booklet x1">
-        <a href="#">A</a>
-    </div>
-    <div class="booklet x1">
-        <a href="#">B</a>
-    </div>
-    <div class="booklet x1">
-        <a href="#">C</a>
-    </div>
-    <div class="booklet x1">
-        <a href="#">D</a>
-    </div>
-    <div class="booklet x1">
-        <a href="#">E</a>
-    </div>
-    <div class="booklet x2">
-        <a href="#">F</a>
-    </div>
-    <div class="booklet x2">
-        <a href="#">G</a>
-    </div>
-    <div class="booklet x2">
-        <a href="#">H</a>
-    </div>
-    <div class="booklet x2">
-        <a href="#">I</a>
-    </div>
-    <div class="booklet x2">
-        <a href="#">J</a>
-    </div>
-    <div class="booklet x3">
-        <a href="#">K</a>
-    </div>
-    <div class="booklet x3">
-        <a href="#">L</a>
-    </div>
-    <div class="booklet x3">
-        <a href="#">M</a>
-    </div>
-    <div class="booklet x3">
-        <a href="#">N</a>
-    </div>
-    <div class="booklet x3">
-        <a href="#">O</a>
-    </div>
-    <div class="booklet x4">
-        <a href="#">P</a>
-    </div>
-    <div class="booklet x4">
-        <a href="#">Q</a>
-    </div>
-    <div class="booklet x4">
-        <a href="#">R</a>
-    </div>
-    <div class="booklet x4">
-        <a href="#">S</a>
-    </div>
-    <div class="booklet x4">
-        <a href="#">T</a>
-    </div>
-    <div class="booklet x5">
-        <a href="#">U</a>
-    </div>
-    <div class="booklet x5">
-        <a href="#">V</a>
-    </div>
-    <div class="booklet x5">
-        <a href="#">W</a>
-    </div>
-    <div class="booklet x5">
-        <a href="#">X</a>
-    </div>
-    <div class="booklet x5">
-        <a href="#">Y</a>
-    </div>
-    <div class="booklet x5 zz">
-        <a href="#">Z</a>
-    </div>
+    <% }) %>
 </div>
