--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,40 +1,42 @@
 <%- include('./parts/head') %>
-    <%- include('./parts/header') %>
-    
-    <div class="blank_row row"></div>
+<%- include('./parts/header') %>
 
-            <div class="row mx-0">
+<div class="blank_row row"></div>
 
-                <div class="col-lg-2"></div>
+<div class="row mx-0">
 
-                <div class="paper col-lg-8">
-                    <div id="texture">
-                    </div>
+    <div class="col-lg-2"></div>
 
-                    <div class="lines">
-                        <div class="lines2"></div>
+    <div class="paper col-lg-8">
+        <div id="texture">
+        </div>
 
-
-                        <div id="glossary">
-
-                            <!-- <div class="inner-hard-cover"></div> -->
-                            <!-- <div id="" class="hard-cover frontc"><div class="etiquette"></div></div> -->
-
-                            <header class="row">
-
-                            </header>
-                            <div id="content" class="row">
-
-                                <!-- <div class="inner-hard-cover"></div> -->
+        <div class="lines">
+            <div class="lines2"></div>
 
 
+            <div id="glossary">
 
+                <!-- <div class="inner-hard-cover"></div> -->
+                <!-- <div id="" class="hard-cover frontc"><div class="etiquette"></div></div> -->
 
-                                <!-- /////////////// INDEX //////////////////// -->
+                <header class="row">
+
+                </header>
+                <div id="content" class="row">
+
+                    <!-- <div class="inner-hard-cover"></div> -->
+                    <%wword.forEach(function(mots){%>
+                    <p><%=mots.word%> : <%=mots.definition%>.</p>
+                    <%})%>
 
 
 
-                                <!-- /////////////// # //////////////////// -->
+                    <!-- /////////////// INDEX //////////////////// -->
+
+
+
+                    <!-- /////////////// # //////////////////// -->
                                 <!-- <div id="page-#" class="row">
                                 <div class="row">
                                         <div class="col"><h1>GLOSSAIRE</h1></div>
@@ -48,38 +50,38 @@
                                     </div>     
                                 </div>
                             </div> -->
-                                <!-- /////////////// # //////////////////// -->
+                            <!-- /////////////// # //////////////////// -->
 
 
-
-                            </div>
-
-
-
-                            <footer class="row">
-                                <img src="img/logo.png" id="logoSimplon" alt="logoSimplon">
-                                <p>Simplon 2018</p>
-                                <p>Valentin, Christopher, Geoffrey, Vanessa</p>
-                            </footer>
 
                         </div>
 
-                        <%- include('./elements/booklets') %>
 
-                        <!-- <div class="inner-hard-cover"></div> -->
-                        <div class="hard-cover"></div>
 
-                        <%- include('./elements/rings') %>
-
+                        <footer class="row">
+                            <img src="img/logo.png" id="logoSimplon" alt="logoSimplon">
+                            <p>Simplon 2018</p>
+                            <p>Valentin, Christopher, Geoffrey, Vanessa</p>
+                        </footer>
 
                     </div>
 
-                </div>
+                    <%- include('./elements/booklets') %>
 
-                <div class="col-lg-2"></div>
+                    <!-- <div class="inner-hard-cover"></div> -->
+                    <div class="hard-cover"></div>
+
+                    <%- include('./elements/rings') %>
+
+
+                </div>
 
             </div>
 
-            <div class="blank_row row"></div>
+            <div class="col-lg-2"></div>
+
+        </div>
+
+        <div class="blank_row row"></div>
 
         <%- include('./parts/footer') %>
