--- a/views/elements/booklets.ejs
+++ b/views/elements/booklets.ejs
@@ -1,7 +1,7 @@
 <div id="booklets-container">
     <% letters.forEach(function(items){ %>
         <div class="booklet x1">
-        <a href="#"><%=items%></a>
+          <a href="/lettre/<%=items%>"><%=items%></a>
     </div>
     <% }) %>
 </div>
