recuperation de l'avancée sans cassage de code

--- a/views/modals/connect.ejs
+++ b/views/modals/connect.ejs
@@ -6,7 +6,7 @@
 
             </div>
             <div class="modal-content">
-                <form action="">
+                <form action="/" method="POST">
                     <input class="" name="connect_username" type="text" placeholder="username">
                     <input class="" name="connect_password" type="password" placeholder="password">
                     <button class="btn" type="submit">Connect</button>
