--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -9,9 +9,13 @@
                 <a class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalRegister">Register</a>
             </div>
 
+            <div class="d-flex justify-content-end mx-auto">
+                <a class="nav-item ml-3" href="/glossary/">Glossary</a>
+            </div>
 
 
-            <a id="navbar-brand" class="navbar-brand" href="/">Template</a>
+
+            <a id="navbar-brand" class="navbar-brand" href="/"><i>Simplon's Hitchiker's guide to Web</i></a>
 
         </nav>
 
