--- a/views/modals/addword.ejs
+++ b/views/modals/addword.ejs
@@ -6,10 +6,9 @@
             </div>
             <div class="modal-content">
                 <form action="/register" method="POST">
-                    <input name="register_username" type="text" placeholder="username">
-                    <input name="register_email" type="email" placeholder="email">
-                    <input name="register_password" type="password" placeholder="password">
-                    <button type="submit">Register</button>
+                    <input name="add_word" type="text" placeholder="word">
+                    <textarea name="add_definition" id="" cols="30" rows="10" placeholder="definition"></textarea>
+                    <button type="submit">Add this word</button>
                 </form>
             </div>
             <div class="modal-footer">
