add flex to the modals

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
                         <!-- pour espacer -->
                         <div class="row mt-5"></div>
 
-                        <div class="row mt-5">
+                        <div class="row mt-5 mx-0">
 
                             <div class="col-lg-2"></div>
 
