--- a/views/modals/addword.ejs
+++ b/views/modals/addword.ejs
@@ -5,11 +5,11 @@
 
             </div>
             <div class="modal-content">
-                <form action="/register" method="POST">
+                <form class="d-flex flex-column" action="/register" method="POST">
                     <input name="add_word" type="text" placeholder="word">
                     <textarea name="add_definition" id="" cols="30" rows="10" placeholder="definition"></textarea>
-                    <button type="submit">Add this word</button>
                 </form>
+                <button type="submit">Add this word</button>
             </div>
             <div class="modal-footer">
 
