--- a/views/modals/register.ejs
+++ b/views/modals/register.ejs
@@ -5,7 +5,7 @@
 
             </div>
             <div class="modal-content">
-                <form action="/register" method="POST">
+                <form class="d-flex flex-column" action="/register" method="POST">
                     <input name="register_username" type="text" placeholder="username">
                     <input name="register_email" type="email" placeholder="email">
                     <input name="register_password" type="password" placeholder="password">
