--- a/views/modals/addword.ejs
+++ b/views/modals/addword.ejs
@@ -5,7 +5,7 @@
 
             </div>
             <div class="modal-content">
-                <form class="d-flex flex-column" action="/register" method="POST">
+                <form class="d-flex flex-column" action="/ajout" method="POST">
                     <input name="add_word" type="text" placeholder="word">
                     <textarea name="add_definition" id="" cols="30" rows="10" placeholder="definition"></textarea>
                 </form>
