Did a lot of rework on the connection form. I found a better way to get users authenticated without local or session storage. I don't trust the user. So I used socket.IO to make some magic. the server keeps tracks of every connected user, even those not authenticated

--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -11,16 +11,19 @@
 
             <div class="d-flex justify-content-end mx-auto">
                 <a class="nav-item ml-3" href="/glossary/">Glossary</a>
+                Welcome
             </div>
 
 
 
-            <a id="navbar-brand" class="navbar-brand" href="/"><i>Simplon's Hitchiker's guide to Web</i></a>
+            <a id="navbar-brand" class="navbar-brand" href="/">
+                <i>Simplon's Hitchiker's guide to Web</i>
+            </a>
 
         </nav>
 
     </header>
 
     <%- include('../modals/connect')%>
-    <%- include('../modals/register')%>
-    <%- include('../modals/addword')%>
+        <%- include('../modals/register')%>
+            <%- include('../modals/addword')%>
