integration of a ternary function in the Visitor class

--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -1,3 +1,6 @@
+<script>
+    let socket_id;
+</script>
 <div id="main_container" class="container-fluid d-flex h-100 p-0 flex-column">
 
     <header class="sticky-top m-0 text-light">
