--- a/views/glossary.ejs
+++ b/views/glossary.ejs
@@ -23,11 +23,13 @@
                         <header class="row">
 
                         </header>
-                        <div id="content">
+                        <div id="content" class="row">
 
                             <%if(locals.wword){%>
                                 <%wword.forEach(function(mots){%>
-                                    <p><%=mots.word%> :<%=mots.definition%>.</p>
+                                    <p>
+                                        <%=mots.word%> :
+                                            <%=mots.definition%>.</p>
                                     <%})%>
                                         <%}%>
 
