--- a/views/elements/word.ejs
+++ b/views/elements/word.ejs
@@ -3,4 +3,7 @@
         <%=mot.word%> :
             <%=mot.definition%>.
     </p>
+    <form action="/glossary" method="POST">
+    	<button name="deleted" type="submit" value="<%=mot.word%>">Supprimer un mot</button>
+    </form>
 <%})%>
