ajout d'un if sur les templates pour n'afficher les boutons supprimer que lors de la visite de la page du mot

--- a/views/elements/word.ejs
+++ b/views/elements/word.ejs
@@ -3,7 +3,9 @@
 	<%=mot.word%> :
 	<%=mot.definition%>.
 </p></a>
+<% if(locals.candel){%>
 <form action="/glossary" method="POST">
 	<button name="deleted" type="submit" value="<%=mot.word%>">Supprimer un mot</button>
 </form>
+<%}%>
 <%})%>
