--- a/views/elements/booklets.ejs
+++ b/views/elements/booklets.ejs
@@ -12,7 +12,8 @@
     <% } else { %>
     x5
     <% } %>
-    ">
+    px-3 py-2
+    text-center">
     <a <%if(index==0) {%>
         href="#" data-toggle="modal" data-target="#modalAddword">
         <%}else {%>
