--- a/views/glossary.ejs
+++ b/views/glossary.ejs
@@ -7,11 +7,13 @@
 
             <div class="col-lg-2"></div>
 
-            <div class="paper col-lg-8">
-                <div id="texture">
-                    <%if(locals.wword){%>
-                        <%- include('./elements/word', wword)%>
-                            <%}%>
+            <div class="paper col-lg-8 pl-0 pr-4">
+                <div class="hard-cover">
+
+
+                </div>
+
+                <div id="texture pr-4">
                 </div>
 
                 <div class="lines">
@@ -23,27 +25,25 @@
                         <!-- <div class="inner-hard-cover"></div> -->
                         <!-- <div id="" class="hard-cover frontc"><div class="etiquette"></div></div> -->
 
-                        <header class="row">
+                        <header class="row pb-5">
 
                         </header>
                         <div id="content" class="row">
-
+                            <%if(locals.wword){%>
+                                <%- include('./elements/word', wword)%>
+                                    <%}%>
                         </div>
-
-
-
-                        <footer class="row">
+                        <!-- <footer class="row">
                             <img src="img/logo.png" id="logoSimplon" alt="logoSimplon">
                             <p>Simplon 2018</p>
                             <p>Valentin, Christopher, Geoffrey, Vanessa</p>
-                        </footer>
+                        </footer> -->
 
                     </div>
 
                     <%- include('./elements/booklets') %>
 
                         <!-- <div class="inner-hard-cover"></div> -->
-                        <div class="hard-cover"></div>
 
                         <%- include('./elements/rings') %>
 
