--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -3,7 +3,7 @@
 </script>
 <div id="main_container" class="container-fluid d-flex h-100 p-0 flex-column">
 
-    <header class="sticky-top m-0 text-light">
+    <header class="sticky-top m-0 p-0 text-light">
 
         <nav class="navbar navbar-expand navbar-dark bg-dark p-0 m-0">
 
@@ -14,7 +14,6 @@
 
             <div class="d-flex justify-content-end mx-auto">
                 <a class="nav-item ml-3" href="/glossary/">Glossary</a>
-                Welcome
             </div>
 
 
