added single word exclusive view

--- a/views/elements/word.ejs
+++ b/views/elements/word.ejs
@@ -7,7 +7,7 @@
 
 
 <!-- <form action="/glossary" method="POST">
-	<button name="deleted" type="submit" value="<%=mot.word%>">Supprimer un mot</button>
+	<button class="btn" name="deleted" type="submit" value="<%=mot.word%>">Supprimer un mot</button>
 </form> -->
 <%#}%>
 <%})%>
