--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,6 +62,10 @@ p {
   min-height: 1100px;
 }
 
+#content_single {
+  min-height: 300px;
+}
+
 footer {
   background-color: white;
   font-family: "Swanky and Moo Moo";
@@ -280,7 +284,7 @@ footer {
   left: 20px;
   height: 30px;
   width: 30px;
-  background: lightblue;
+  background: burlywood;
   border-radius: 50%;
   box-shadow: inset 0px 0px 2px 0px #888;
 }
