fixed glossary layout of words

--- a/views/glossary.ejs
+++ b/views/glossary.ejs
@@ -28,7 +28,7 @@
                         <header class="row pb-5">
 
                         </header>
-                        <div id="content" class="row">
+                        <div id="content" class="col-12 pl-5">
                             <%if(locals.wword){%>
                                 <%- include('./elements/word', wword)%>
                                     <%}%>
