--- a/views/word.ejs
+++ b/views/word.ejs
@@ -8,6 +8,10 @@
             <div class="col-lg-2"></div>
 
             <div class="paper col-lg-8 pl-0 pr-4">
+                <div class="hard-cover">
+
+
+                </div>
 
                 <div id="texture pr-4">
                 </div>
@@ -24,7 +28,7 @@
                         <header class="row pb-5">
 
                         </header>
-                        <div id="content_single" class="row">
+                        <div id="content" class="row">
                             <%- include('./elements/single_word') %>
                         </div>
                         <!-- <footer class="row">
@@ -35,10 +39,11 @@
 
                     </div>
 
+                    <%- include('./elements/booklets') %>
 
                         <!-- <div class="inner-hard-cover"></div> -->
-                        <!-- <%- include('./elements/holes_only') %> -->
 
+                        <%- include('./elements/rings') %>
 
 
                 </div>
