C'est verifié, c'est arrivé au fond des chaussettes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,10 +39,10 @@
                                                     <div class="col-md-12">
                                                         <h1>GLOSSAIRE</h1>
 
-                                                        <form class="form-inline">
-                                                            <input id="search-sticker" class="form-control mr-1" type="search" placeholder="Search" aria-label="Search">
-                                                            <button id="submit-sticker" class="btn btn-outline-success btn-sm m-1" type="submit">Search</button>
-                                                        </form>
+                                                      <!-- <form method="POST" class="form-inline"> -->
+                                                            <input id="search-sticker" class="form-control mr-1" type="search" placeholder="Search" aria-label="Search" name="searc">
+                                                            <button id="submit-sticker" class="btn btn-outline-success btn-sm m-1" onclick="var ndh=getElementById('search-sticker').value;window.location.href=`/glossary/${ndh}`">Search</button>
+                                                        <!-- </form> -->
 
                                                     </div>
                                                 </div>
